Revision history for Perl extension Module::Build.

0.27_03

 - If the user passes a no_index parameter to our constructor, we now
   pass that through when building the META.yml file. [Richard
   Soderberg, RT #9603]

 - Some versions of MakeMaker, CPANPLUS, and/or PAUSE thought that a
   certain line of our code was declaring a $VERSION when we didn't
   intend to.  The line has been obscurified so they won't think that
   anymore. [Jos Boumans, RT #14226]

 - We now use ExtUtils::CBuilder to do all compiling of C code (for
   example, when compiling XS modules).  (This change actually
   occurred in 0.27_01, but it was mistakenly omitted from the Changes
   file.)

 - Fixed an issue on Win32 (and other case-tolerant
   non-case-preserving systems, possibly like VMS?) in which the
   current working directory would sometimes be reported with
   different case, fooling us into thinking that we were in the wrong
   directory. [David Golden]

 - Added the Apache, MIT, and Mozilla licenses to the list of licenses
   that this module knows about. [Bob Ippolito]

 - Added a URL for each license type that we know about, which will
   appear as resources=>license: in the generated META.yml file.

 - Fixed a pretty significant typo in the documentation for
   auto_features. [Spotted by Jonas B. Nielsen]

 - In order to aid people who want to do customization of the META.yml
   file, we've added a "metafile" property that can then be easily
   overridden in subclasses, changed do_create_meta_yml() to
   do_create_metafile(), and split out the code that actually
   generates the YAML into a new method, write_metafile(). [David
   Wheeler]

 - Fixed a couple of non-helpful behaviors with extra_compiler_flags
   and extra_linker_flags.  These will automatically be run through
   split_like_shell() when given to new() as strings.

 - When the user doesn't have ExtUtils::ParseXS installed, the
   displayed command line for creating the .c file from the .xs file