@@ -40,8 +40,7 @@ sub create_makefile_pl {
   }
 
   print {$fh} "# Note: this file was auto-generated by ", __PACKAGE__, " version $VERSION\n";
-  my $subclass_dir = File::Spec->catdir($build->config_dir, 'lib');
-  $subclass_dir =~ s/([\'\\])/\\$1/g;
+  my $subclass_dir = $package->subclass_dir($build);
   
   if ($type eq 'small') {
     printf {$fh} <<'EOF', $subclass_dir, ref($build), ref($build);
@@ -128,6 +127,17 @@ EOF
   }
 }
 
+
+sub subclass_dir {
+  my ($self, $build) = @_;
+  
+  my $build_mod = join('/', split /::/, ref($build)) . '.pm';
+  return File::Spec->catdir($build->config_dir, 'lib')
+    unless exists $INC{$build_mod};
+
+  my ($build_vol, $build_dir) = File::Spec->splitpath($INC{$build_mod});
+  return File::Spec->catpath($build_vol, $build_dir, '');
+}
 
 sub makefile_to_build_args {
   shift;
